LinKreta_POC_Repository/force-app/main/default/objects/Pardot_Landing_Page__c/Pardot_Landing_Page__c.object-meta.xml
<CustomObject>
    <label>Pardot Landing Page</label>
    <nameField>
        <displayFormat>PLP-{000000}</displayFormat>
        <label>Request No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pardot Landing Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>