LinKreta_POC_Repository/force-app/main/default/objects/Pardot_Landing_Page__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <label>Attended</label>
    <length>50</length>
    <type>Text</type>
</CustomField>