LinKreta_POC_Repository/force-app/main/default/objects/Pardot_Landing_Page__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Pardot Landing Pages</relationshipLabel>
    <relationshipName>Pardot_Landing_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>