LinKreta_POC_Repository/force-app/main/default/objects/Pardot_Landing_Page__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pardot Landing Pages</relationshipLabel>
    <relationshipName>Pardot_Landing_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>