LinKreta_POC_Repository/force-app/main/default/objects/Pardot_Landing_Page__c/fields/Landing_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Name__c</fullName>
    <label>Landing Page Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>