LinKreta_POC_Repository/force-app/main/default/objects/Pardot_Landing_Page__c/fields/New_Client__c.field-meta.xml
<CustomField>
    <fullName>New_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Pardot Landing Pages</relationshipLabel>
    <relationshipName>Pardot_Landing_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>