LinKreta_POC_Repository/force-app/main/default/objects/Pardot_Landing_Page__c/fields/Pardot_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Event_Name__c</fullName>
    <label>Pardot Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>