LinKreta_POC_Repository/force-app/main/default/objects/Pardot_Landing_Page__c/fields/Pardot_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Expertise__c</fullName>
    <label>Pardot Expertise</label>
    <length>50</length>
    <type>Text</type>
</CustomField>