LinKreta_POC_Repository/force-app/main/default/objects/Pardot_Landing_Page__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Attended__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Phone__c</columns>
    <columns>Pardot_Event_Name__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Pardot_Expertise__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>